--- a/stories/index.html
+++ b/stories/index.html
@@ -1870,6 +1870,30 @@
       <td><a name="it0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/it/0072_la-vendetta-della-nettarovìa_slides.html" target="_blank">La vendetta della Nettarovìa</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/it/0087_mi-piace-leggere_slides.html" target="_blank">Mi piace leggere!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0089</td>
+      <td><a href="/stories/it/0089_khalai-parla-alle-piante_slides.html" target="_blank">Khalai parla alle piante.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/it/0095_zama-è-grande_slides.html" target="_blank">Zama è grande!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Mio libbro di immagini</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4493,7 +4517,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#pa0072">pa</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -4523,13 +4547,13 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#tl0089">tl</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
@@ -4547,7 +4571,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
