--- a/stories/it/0095_zama-è-grande_slides.html
+++ b/stories/it/0095_zama-è-grande_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>آتش - Global African Storybook</title>
+  <title>Zama è grande! - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="آتش" class="slide level1">
-<h1 dir="rtl">آتش</h1>
+<section id="zama-è-grande" class="slide level1">
+<h1>Zama è grande!</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p dir="rtl">نگاه کن، آتش.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
+<p>Il mio fratellino si addormenta molto tardi. Io mi alzo presto perché sono un grande!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p dir="rtl">آتش می سوزاند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
+<p>Io sono quello che lascia entrare il sole.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p dir="rtl">آتش می‌پزاند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
+<p>&quot;Tu sei la mia stella del mattino.&quot; dice mamma.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p dir="rtl">آتش گرما می دهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
+<p>Io mi lavo da solo, non ho bisogno di aiuto.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p dir="rtl">آتش نور می دهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
+<p>Io posso tener testa all'acqua fredda e al sapone blu e odoroso.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p dir="rtl">نگاه کن، آتش.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
+<p>Mamma mi ricorda &quot;Non dimenticarti i denti&quot; Io rispondo: &quot;Mai, non io!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p dir="rtl">آتش شگفت انگیز است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
+<p>Dopo essermi lavato, saluto Nonno e Zia e gli auguro una buona giornata.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p dir="rtl">آتش سهمیگین است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
+<p>Poi mi vesto &quot;Ora sono grande. mamma.&quot; Dico.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,53 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="آتش-1">آتش</h2>
-<strong>Text:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
+<p>Io posso abbottonarmi e allacciarmi le scarpe.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
+<p>E mi assicuro che il mio fratellino sappia tutte le novità della scuola.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
+<p>In classe faccio del mio meglio in ogni modo.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
+<p>Io faccio tutte queste cose buone ogni giorno. Ma la cosa che più mi piace è giocare e giocare!</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="zama-è-grande-1">Zama è grande!</h2>
+<strong>Text:</strong> Michael Oguttu<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/fire'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
