--- a/stories/fa/0271_دو.html
+++ b/stories/fa/0271_دو.html
@@ -102,6 +102,11 @@ Carole Bloch<br>فارسی</div><div class="pagebreak">
 <div class="pagenum">9</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
+
+<div class="pagenum">10</div>
+<p dir="rtl"></div><div class="pagebreak"></p>
+
 <p dir="rtl"><strong>Text:</strong> Carole Bloch<br /><strong>Illustrations:</strong> Richard MacIntosh<br /><strong>Translation:</strong> Marzieh Mohammadian Haghighi<br /><strong>Language:</strong> Persian</p>
 <p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/two">here</a>
 <p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
