--- a/stories/index.html
+++ b/stories/index.html
@@ -1894,6 +1894,18 @@
       <td><a name="it0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/it/0110_un-piccolo-seme-la-storia-di-wangari-maathai_slides.html" target="_blank">Un Piccolo Seme: La Storia di Wangari Maathai</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0111</td>
+      <td><a href="/stories/it/0111_perchè-gli-ippopotami-non-hanno-il-pelo_slides.html" target="_blank">Perchè gli ippopotami non hanno il pelo.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Mio libbro di immagini</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2774,7 +2786,7 @@
     </tr>
     <tr>
       <td>0052</td>
-      <td><a href="/stories/fa/0052_سیمبگویره_slides.html" target="_blank">سیمبگویره </a></td>
+      <td><a href="/stories/fa/0052_سیمبگویره_slides.html" target="_blank">سیمبگویره</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -4589,13 +4601,13 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
