--- a/stories/it/0110_un-piccolo-seme-la-storia-di-wangari-maathai_slides.html
+++ b/stories/it/0110_un-piccolo-seme-la-storia-di-wangari-maathai_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>سیمبگویره - Global African Storybook</title>
+  <title>Un Piccolo Seme: La Storia di Wangari Maathai - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="سیمبگویره" class="slide level1">
-<h1 dir="rtl">سیمبگویره</h1>
+<section id="un-piccolo-seme-la-storia-di-wangari-maathai" class="slide level1">
+<h1>Un Piccolo Seme: La Storia di Wangari Maathai</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p dir="rtl">وقتی که مادرسیمبگویره مرد، او خیلی غمگین بود. پدر سیمبگویره تمام تلاشش را کرد تا از دخترش مراقبت کند. کم کم آنها یاد گرفتند که بدون وجود مادرسیمبگویره دوباره احساس شادی کنند. هر روز صبح آنها مینشستند و در مورد روزی که پیش رو داشتند با هم صحبت میکردند. هر بعد از ظهر با هم شام درست میکردند. بعد از شستن ظرفها، پدرسیمبگویره در انجام تکالیفش به او کمک میکرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>In un villaggio sulle colline del monte Kenya nel Africa dell' Est, una bambina lavorava nei campi con sua madre. Il suo nome era Wangari.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p dir="rtl">یک روز پدر سیمبگویره دیرتر از همیشه به خانه آمد. او صدا زد، &quot;دخترم کجایی؟&quot; سیمبگویره به سمت پدرش دوید. اوبیحرکت ایستاد وقتی که دید پدرش دست زنی را گرفته بود.&quot; دخترم، من میخواهم که تو شخص خاصی را ملاقات کنی. با لبخند گفت، &quot;این آنیتا هست&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>Wangari adorava stare all'aria aperta. Nel suo orto di famiglia rompeva il terreno con il suo machete e schiacciava piccoli semini nel suo caldo suolo.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p dir="rtl">آنیتا گفت، &quot;سلام سیمبگویره ، پدرت در مورد تو زیاد برایم گفته است.&quot; ولی او لبخند نزد یا دست سیمبگویره را نگرفت. پدر سیمبگویره خوشحال و هیجان زده بود. او در مورد اینکه اگرهر سه تای آنها با هم زندگی کنند، چقدر خوشبخت میشوند صحبت کرد. او گفت &quot;دخترم، من امیدوارم که تو آنیتا را به عنوان مادرت بپذیری.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>Il suo momento preferito della giornata era subito dopo il tramonto. Quando diventava troppo buio per vedere le piante, Wangari sapeva che era ora di tornare a casa. Seguiva il sentiero tracciato attraverso i campi, attraversando i suoi fiumi.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p dir="rtl">زندگی سیمبگویره تغییر کرد. او دیگر وقت نداشت که صبح کنار پدرش بنشیند. آنیتا کارهای خانه ی خیلی زیادی به او میداد در حدی که بعد ازظهرها برای انجام تکالیفش خیلی خسته بود. او بعد ازخوردن شام یک راست به رختخواب میرفت. تنها چیزی که به او آرامش میداد پتوی رنگارنگی بود که مادرش به او داده بود. پدرسیمبگویره متوجه نبود که دخترش شاد به نظر نمیرسد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>Wangari era una ragazza intelligente e non vedeva l'ora di andare a scuola. Ma sua madre e suo padre volevano che rimanesse a casa ad aiutarli. Quando compì sette anni, suo fratello maggiore persuase i suoi genitori a lasciarla andare a scuola.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p dir="rtl">بعد از چند ماه، پدرسیمبگویره به آنها گفت که باید برای مدتی خانه را ترک کند. او گفت، &quot;باید به سفری کاری بروم.&quot; &quot;ولی میدانم که شما مراقب هم خواهید بود.&quot; صورت سیمبگویره آویزان و غمگین شد، ولی پدرش متوجه نشد. آنیتا هیچ حرفی نزد. او هم خوشحال نبود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>Adorava imparare! Wangari imparava sempre di più con ogni libro che leggeva. Era così brava a scuola che la invitarono a studiare negli Stati Uniti d'America. Wangari era così emozionata. Voleva imparare di più sul mondo.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p dir="rtl">اوضاع برای سیمبگویره بدتر شد. اگر اوکارهای روزمره را تمام نمی کرد یا شکایت میکرد، آنیتا او را کتک میزد. و موقع شام، آنیتا بیشترغذا ها را میخورد، و سیمبگویره را با اندکی غذا رها میکرد. هر شب سیمبگویره برای خودش گریه میکرد و پتوی مادرش را در آغوش میگرفت تا خوابش ببرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>Nell'università americana, Wangari imparò tantissime cose nuove. Studiò le piante e come crescevano e si ricordò di come era cresciuta lei. Giocando con i suoi fratelli all'ombra degli alberi della bellissima foresta keniana.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p dir="rtl">یک روز صبح، سیمبگویره دیر از رختخواب بلند شد. آنیتا سرش داد زد و گفت، &quot;تو دختر تنبلی هستی!&quot; او سیمبگویره را از تخت هل داد. آن پتوی با ارزش به ناخنش گیر کرد و به دو قسمت پاره شد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>Più imparava, più realizzava quanto amasse la gente del Kenya. Voleva che loro fossero felici e liberi. Più imparava, più si ricordava della sua casa africana.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p dir="rtl">سیمبگویره خیلی آشفته بود. او تصمیم گرفت که از خانه فرار کند. او قسمتی از پتوی مادرش را برداشت، مقداری غذا برداشت و خانه را ترک کرد. او راهی که پدرش رفته بود را دنبال کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>Quando finì gli studi, ritornò in Kenya, ma il suo paese era cambiato. Enormi aziende agricole si erano espanse per tutto il terreno. Le donne non avevano più legna per fare il fuoco da cucina. La gente era povera e i bambini avevano fame.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
-<p dir="rtl">وقتی که غروب شد، از یک درخت بلند نزدیک رود بالا رفت و درشاخه ها برای خودش تختی درست کرد. تا زمانی که به خواب رفت آواز میخواند: &quot;مامان، مامان، مامان تو من را رها کردی. تو مرا رها کردی و دیگر هیچوقت برنگشتی. پدردیگر من را دوست ندارد. مامان، تو کی برمیگردی؟ تو منو رها کردی.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>Wangari sapeva cosa fare. Insegnò alle donne come piantare alberi dai semi. Le donne vendettero gli alberi e usarono i soldi per prendersi cura delle loro famiglie. Le donne erano molto felici. Wangari le aveva aiutate a sentirsi forti e potenti.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
-<p dir="rtl">صبح روز بعد، سیمبگویره دوباره آواز خواند. وقتی که زنان برای شستن لباس هایشان به کنار رود آمدند، صدای آواز غمگینی را که از بالای یک درخت بلند میامد، شنیدند. آنها فکر کردند که آن فقط باد است که برگ ها را به صدا در میاورد، وبه کار خود ادامه دادند. ولی یکی از خانم ها خیلی با دقت به آواز گوش داد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>Con il passare del tempo, i nuovi alberi diventarono foreste e i fiumi ripresero a scorrere. Il messaggio di Wangari si espanse per tutta l'Africa. Oggi, milioni di alberi sono cresciuti dai semi di Wangari.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p dir="rtl">آن زن به بالای درخت نگاه کرد. وقتی که او آن دختر و قسمتی از پتوی رنگارنگش را دید، گریه کرد، &quot;سیمبگویره ، دختر برادرم.&quot; زنان دیگر شستشو را متوقف کرد و به سیمبگویره در پایین آمدن از درخت کمک کرد. عمه اش آن دخترک را در آغوش گرفت وسعی کرد اورا دلداری دهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>Wangari lavorò duramente. Gente di tutto il mondo riconobbe il suo lavoro e le diedero un premio famosissimo, chiamato Premio Nobel per la Pace. Era la prima donna africana a riceverne uno.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p dir="rtl">عمه ی سیمبگویره او را به خانه ی خودش برد. او به سیمبگویره غذای گرم داد، و او را با پتوی مادرش در رختخواب گذاشت. آن شب سیمبگویره گریه کرد تا زمانی که خوابش برد. ولی آنها اشک آسودگی بود. او میدانست که عمه اش مراقبش خواهد بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>Wangari morì nel 2011, ma possiamo pensare a lei ogni volta che vediamo un bellissimo albero.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,53 +204,17 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p dir="rtl">وقتی که پدرسیمبگویره به خانه برگشت، اتاقش را خالی دید. با قلبی اندوهگین پرسید، &quot;چه اتفاقی افتاده آنیتا؟&quot; زن توضیح داد که سیمبگویره فرار کرده است. او گفت، &quot;من از او خواستم که به من احترام بگذارد،&quot;ولی شاید من خیلی سخت گیر بودم.&quot; پدر سیمبگویره خانه را ترک کرد و به سمت مسیر رود رفت. او مسیرش را به سمت روستای خواهرش ادامه داد تا ببیند که آیا او سیمبگویره را دیده است.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p dir="rtl">سیمبگویره داشت با بچه های عمه اش بازی میکرد که پدرش را از دور دید. او ترسیده بود ممکن بود پدرش عصبانی باشد، پس او به داخل خانه دوید تا قایم شود. ولی پدرش به سمت او رفت و گفت، &quot;سیمبگویره ، تو یک مادر عالی برای خودت پیدا کردی. کسی که تو را دوست دارد وتو را میفهمد. من به تو افتخار میکنم و تو را دوست دارم.&quot; آنها موافقت کردند که سیمبگویره تا زمانی که بخواهد پیش عمه اش بماند.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p dir="rtl">پدرش هر روز به دیدن او می رفت. سرانجام او با آنیتا رفت. او دستش را دراز کرد که دستان سیمبگویره را بگیرد. او گریه کرد وگفت، &quot;من خیلی متاسفم کوچولو، من اشتباه کردم.&quot; &quot;به من اجازه می دهی که دوباره امتحان کنم؟&quot; سیمبگویره به پدرش وصورت نگرانش نگاه کرد. سپس به آرامی به سمت آنیتا قدم برداشت و دستانش را دور او حلقه کرد.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p dir="rtl">هفته ی بعد، آنیتا، سیمبگویره ،عمه و پسر عمه هایش را به صرف عصرانه به خانه دعوت کرد. عجب ضیافتی! آنیتا تمام غذاهای مورد علاقه ی سیمبگویره را آماده کرده بود، وهمگی تا جایی که جا داشتند از آنها خوردند. سپس بچه ها در حالیکه بزرگترها مشغول صحبت بودند سرگرم بازی شدند. سیمبگویره احساس شادی و شجاعت کرد. او زود تصمیم گرفت، خیلی زود، که به خانه برگردد وبا پدر و نامادریش زندگی کند.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 dir="rtl" id="سیمبگویره-1">سیمبگویره</h2>
-<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="un-piccolo-seme-la-storia-di-wangari-maathai-1">Un Piccolo Seme: La Storia di Wangari Maathai</h2>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
