--- a/stories/zh/0243_和奶奶一起过暑假.html
+++ b/stories/zh/0243_和奶奶一起过暑假.html
@@ -77,21 +77,21 @@ Violet Otieno<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
 
-<p>当他们到达那个渔村的时候，爸爸把欧东格和阿皮尤叫醒了。他们发现他们的奶奶—尼亚 坎亚达—在树荫里铺了一块垫子，正坐在上面休息。在当地的语言里，这个名字的意思是“坎亚达人民的女儿”。她是一个坚强美丽的女性。</p>
+<p>当他们到达那个渔村的时候，爸爸把欧东格和阿皮尤叫醒了。他们发现他们的奶奶——尼亚·坎亚达——在树荫里铺了一块垫子，正坐在上面休息。在当地的语言里，这个名字的意思是“坎亚达人民的女儿”。她是一个坚强美丽的女性。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>尼亚 坎亚达欢迎他们来到自己的家里，和他们一起快乐地唱歌跳舞。他们的孙子也很高兴地把他们在城里买的礼物送给她。欧东格和阿皮尤吵着要奶奶先打开自己的礼物。</p>
+<p>尼亚·坎亚达欢迎他们来到自己的家里，和他们一起快乐地唱歌跳舞。他们的孙子也很高兴地把他们在城里买的礼物送给她。欧东格和阿皮尤吵着要奶奶先打开自己的礼物。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
 
-<p>尼亚 坎亚达打开了礼物后，用传统的习俗祝福了她的孙儿们。</p>
+<p>尼亚·坎亚达打开了礼物后，用传统的习俗祝福了她的孙儿们。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Violet Otieno<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
 
-<p>尼亚 坎亚达教他们煮乌咖喱，还教他们怎么做和烤鱼一起吃的椰子饭。</p>
+<p>尼亚·坎亚达教他们煮乌咖喱，还教他们怎么做和烤鱼一起吃的椰子饭。</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -147,7 +147,7 @@ Violet Otieno<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
 
-<p>有一天，孩子们和尼亚 坎亚达一起去集市上。奶奶有一个卖蔬菜、糖和肥皂的摊位。阿皮尤给顾客们报价钱，欧东格帮着顾客打包。</p>
+<p>有一天，孩子们和尼亚·坎亚达一起去集市上。奶奶有一个卖蔬菜、糖和肥皂的摊位。阿皮尤给顾客们报价钱，欧东格帮着顾客打包。</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
@@ -161,14 +161,14 @@ Violet Otieno<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
 
-<p>很快，假期就结束了，孩子们要回城了。尼亚 坎亚达送给欧东格一顶帽子，送给阿皮尤一件毛衣。她帮孩子们装了点食物在路上吃。</p>
+<p>很快，假期就结束了，孩子们要回城了。尼亚·坎亚达送给欧东格一顶帽子，送给阿皮尤一件毛衣。她帮孩子们装了点食物在路上吃。</p>
 
 <div class="pagenum">17</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
 
-<p>当爸爸来接他们的时候，他们一点儿都不想走。孩子们求尼亚 坎亚达和他们一起去城里。她笑着说：“我太老了，不适合住在大城市里。我就在这个村子里面等你们，等你们下次再来。”</p>
+<p>当爸爸来接他们的时候，他们一点儿都不想走。孩子们求尼亚·坎亚达和他们一起去城里。她笑着说：“我太老了，不适合住在大城市里。我就在这个村子里面等你们，等你们下次再来。”</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
